Fix body not filling entire viewport in OBS
- This was due to the height being set with dvh, which is not supported in the Chromium Version OBS uses. It now has a fallback value for older versions and uses dvh in newer browsers
- This also resulted in the Viewer not aligning with the bottom if set as the alignment option and that is now also fixed

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     --alignment-vertical: column;
     
     width: 100dvw;
+    height: 100vh;
     height: 100dvh;
     
     overflow: hidden;
@@ -46,7 +47,7 @@ main {
 }
 
 main:not(.aligned_to_top) {
-    margin-block-start: auto;
+    align-self: end;
 }
 
 /* 
